Added missing comma in config

--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -34,7 +34,7 @@ process {
   $trim_galore.module = ['bioinfo-tools', 'TrimGalore']
   $bwa.module = ['bioinfo-tools', 'bwa', 'samtools']
   $samtools.module = ['bioinfo-tools', 'samtools', 'BEDTools']
-  $picard.module = ['bioinfo-tools', 'picard/2.0.1' 'samtools', 'BEDTools']
+  $picard.module = ['bioinfo-tools', 'picard/2.0.1', 'samtools', 'BEDTools']
   $phantompeakqualtools.module = ['bioinfo-tools', 'samtools', 'R/3.1.0', 'phantompeakqualtools', 'SPP']
   $deepTools.module = ['bioinfo-tools', 'deepTools']
   $ngsplot.module = ['bioinfo-tools', 'samtools', 'R/3.2.3', 'ngsplot']
