Modules revised for phantompeakqualtools and ngsplot in config file; Code revised for ngsplot in main.nf

--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -18,29 +18,29 @@ process {
   clusterOptions = {
     "-A $params.project"
   }
-  
+
   errorStrategy = task.exitStatus == 143 ? 'retry' : 'ignore'
   maxRetries = 3
   maxErrors = '-1'
-  
+
   // Module specific retrying
   $trim_galore.errorStrategy = task.exitStatus == 143 ? 'retry' : 'terminate'
   $bwa.errorStrategy = task.exitStatus == 143 ? 'retry' : 'finish'
   $samtools.errorStrategy = task.exitStatus == 143 ? 'retry' : 'finish'
   $picard.errorStrategy = task.exitStatus == 143 ? 'retry' : 'finish'
-  
+
   // Environment Modules for each process
   $fastqc.module = ['bioinfo-tools', 'FastQC']
   $trim_galore.module = ['bioinfo-tools', 'TrimGalore']
   $bwa.module = ['bioinfo-tools', 'bwa', 'samtools']
   $samtools.module = ['bioinfo-tools', 'samtools', 'BEDTools']
   $picard.module = ['bioinfo-tools', 'picard/2.0.1', 'samtools', 'BEDTools']
-  $phantompeakqualtools.module = ['bioinfo-tools', 'samtools', 'R/3.1.0', 'phantompeakqualtools', 'SPP']
+  $phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools']
   $deepTools.module = ['bioinfo-tools', 'deepTools']
   $ngsplot.module = ['bioinfo-tools', 'samtools', 'R/3.2.3', 'ngsplot']
   $macs.module = ['bioinfo-tools', 'MACS', 'samtools']
   $multiqc.module = ['bioinfo-tools', 'MultiQC']
-  
+
   // NB: Set $multiqc.module = false if you have your own installation
   // of MultiQC outside of the environment module system.
 }
