--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -12,7 +12,7 @@ vim: syntax=groovy
 
 process {
   executor = 'slurm'
-  cpus = { 1 * task.attempt }
+  cpus = { 2 * task.attempt }
   memory = { 16.GB * task.attempt }
   time = { 2.h * task.attempt }
   clusterOptions = { "-A $params.project " + (params.clusterOptions ?: '') }
@@ -23,37 +23,73 @@ process {
   // Process specific configuration
   $fastqc {
     module = ['bioinfo-tools', 'FastQC']
+    cpus = 1
     memory = { 8.GB * task.attempt }
-    time = { 2.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $trim_galore {
     module = ['bioinfo-tools', 'FastQC', 'TrimGalore']
-    cpus = { 2 * task.attempt }
     time = { 8.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'terminate' }
   }
   $bwa{
     module = ['bioinfo-tools', 'bwa', 'samtools']
+    cpus = 8
+    memory = { 64.GB * task.attempt }
+    time = { 48.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
   $samtools {
     module = ['bioinfo-tools', 'samtools', 'BEDTools']
+    time = { 120.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
   $picard {
     module = ['bioinfo-tools', 'picard/2.0.1', 'samtools', 'BEDTools']
-    cpus = { 2 * task.attempt }
+    time = { 24.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
-  $phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools']
-  $deepTools.module = ['bioinfo-tools', 'deepTools']
-  $ngsplot.module = ['bioinfo-tools', 'samtools', 'R/3.2.3', 'ngsplot']
-  $macs.module = ['bioinfo-tools', 'MACS', 'samtools']
+  $countstat {
+    memory = { 4.GB * task.attempt }
+  }
+  $phantompeakqualtools {
+    module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools']
+    time = { 24.h * task.attempt }
+  }
+  $combinesppout {
+    cpus = 1
+    memory = { 2.GB * task.attempt }
+  }
+  $calculateNSCRSC {
+    cpus = 1
+    memory = { 2.GB * task.attempt }
+  }
+  $deepTools {
+    module = ['bioinfo-tools', 'deepTools']
+    cpus = 4
+    memory = { 32.GB * task.attempt }
+    time = { 120.h * task.attempt }
+  }
+  $ngs_config_generate {
+    memory = { 2.GB * task.attempt }
+  }
+  $ngsplot {
+    module = ['bioinfo-tools', 'samtools', 'R/3.2.3', 'ngsplot']
+    time = { 120.h * task.attempt }
+  }
+  $macs {
+    module = ['bioinfo-tools', 'MACS', 'samtools']
+    cpus = 4
+    memory = { 32.GB * task.attempt }
+    time = { 24.h * task.attempt }
+  }
   // NB: Overwrite this in your user config file (~/.nextflow/config)
   // if you have your own installation of MultiQC outside of the environment module system.
   // eg: Add the line: params.$multiqc.module = ''
-  $multiqc.module = ['bioinfo-tools', 'MultiQC']
+  $multiqc {
+    module = ['bioinfo-tools', 'MultiQC']
+    cpus = 1
+  }
 }
 
 params {
