Added new docker and testing profiles. Created test script and travis config.

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,11 +15,11 @@ profiles {
   standard {
     includeConfig 'conf/uppmax.config'
   }
-
-  // UNDER DEVELOPMENT (not yet written)
   docker {
-    process.container = 'your/image'
-    docker.enabled = true
+    includeConfig 'conf/docker.config'
+  }
+  testing {
+    includeConfig 'conf/testing.config'
   }
 
 }
