Print commitId if known. Made test run with ewels dockerhub image.

--- a/conf/testing.config
+++ b/conf/testing.config
@@ -14,7 +14,7 @@ docker {
   enabled = true
 }
 process {
-  container = 'scilifelab/ngi-chipseq'
+  container = 'ewels/ngi-chipseq'
   executor = 'local'
   cpus = 2
   memory = 7.GB
