Removed the testing profile. Use docker profile for test script.

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -15,7 +15,7 @@ docker {
 process {
   container = 'scilifelab/ngi-chipseq'
   executor = 'local'
-  cpus = 1
-  memory = 16.GB
+  cpus = $executor.cpus
+  memory = $executor.memory
   time = 48.h
 }
