--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -39,7 +39,7 @@ process {
     time = { 48.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
-  $samtools/1.3 {
+  $samtools {
     module = ['bioinfo-tools', 'samtools/1.3', 'BEDTools']
     time = { 120.h * task.attempt }
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
