--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,9 @@ profiles {
   standard {
     includeConfig 'conf/uppmax.config'
   }
+  devel {
+    includeConfig 'conf/uppmax-devel.config'
+  }
   docker {
     includeConfig 'conf/docker.config'
   }
