Various updates - docs html, email, other tidying.

--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -76,11 +76,12 @@ process {
     memory = { 32.GB * task.attempt }
     time = { 24.h * task.attempt }
   }
-  // NB: Overwrite this in your user config file (~/.nextflow/config)
+  // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
-  // eg: Add the line: params.$multiqc.module = ''
+  // eg: Add the line: process.$multiqc.module = []
   $multiqc {
     module = ['bioinfo-tools', 'MultiQC']
+    executor = 'local'
     cpus = 1
   }
 }
