--- a/nextflow.config
+++ b/nextflow.config
@@ -21,3 +21,8 @@ profiles {
     includeConfig 'conf/docker.config'
   }
 }
+
+manifest {
+  homePage = 'https://github.com/SciLifeLab/NGI-ChIPseq'
+  description = 'NGI-ChIPseq is a bioinformatics best-practice analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data analysis at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.'
+}
