--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,12 @@ profiles {
   docker {
     includeConfig 'conf/docker.config'
   }
+  aws {
+    includeConfig 'conf/aws.config'
+  }
+  none {
+    // Don't load any config (for use with custom home configs)
+  }
 }
 
 manifest {
