Fixed a few minor config changes.

--- a/conf/uppmax-devel.config
+++ b/conf/uppmax-devel.config
@@ -84,6 +84,10 @@ process {
 
 params {
   clusterOptions = false
+  rlocation = "$HOME/R/nxtflow_libs/"
+  params.saveReference = true
+  // Need to specify this here (as well as main.nf) so that timeline and trace work below.
+  outdir = './results'
   // illumina iGenomes reference file paths on UPPMAX
   genomes {
     'GRCh37'      { bwa = '/sw/data/uppnex/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/' }
