--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,9 @@ profiles {
   docker {
     includeConfig 'conf/docker.config'
   }
+  testing {
+    includeConfig 'conf/testing.config'
+  }
   aws {
     includeConfig 'conf/aws.config'
   }
