--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -88,6 +88,8 @@ process {
 
 params {
   clusterOptions = false
+  rlocation = "$HOME/R/nxtflow_libs/"
+  saveReference = true
   // illumina iGenomes reference file paths on UPPMAX
   genomes {
     'GRCh37'      { bwa = '/sw/data/uppnex/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/' }
