Fixed copy+paste typos. Added docs about --fasta.

--- a/conf/testing.config
+++ b/conf/testing.config
@@ -22,9 +22,9 @@ process {
 }
 timeline {
   enabled = true
-  file = "${params.outdir}/NGI-MethylSeq_timeline.html"
+  file = "${params.outdir}/NGI-ChIPseq_timeline.html"
 }
 trace {
   enabled = true
-  file = "${params.outdir}/NGI-MethylSeq_trace.txt"
+  file = "${params.outdir}/NGI-ChIPseq_trace.txt"
 }
