Always run trace and timeline.

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,19 @@ profiles {
   }
 }
 
+// Capture exit codes from upstream processes when piping
+process.shell = ['/bin/bash', '-euo', 'pipefail']
+
+params.outdir = './results'
+timeline {
+  enabled = true
+  file = "${params.outdir}/NGI-ChIPseq_timeline.html"
+}
+trace {
+  enabled = true
+  file = "${params.outdir}/NGI-ChIPseq_trace.txt"
+}
+
 manifest {
   homePage = 'https://github.com/SciLifeLab/NGI-ChIPseq'
   description = 'NGI-ChIPseq is a bioinformatics best-practice analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data analysis at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.'
