--- a/conf/aws.config
+++ b/conf/aws.config
@@ -16,86 +16,14 @@ docker {
 process {
   container = 'scilifelab/ngi-chipseq'
   executor = 'ignite'
-  time = { 2.h * task.attempt }
-  errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
-  maxRetries = 3
-  maxErrors = '-1'
-
-
-  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
-  maxRetries = 3
-  maxErrors = '-1'
-
-  // Environment modules and resource requirements
-  $fastqc {
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $trim_galore {
-    time = { 12.h * task.attempt }
-  }
-  $bwa{
-    time = { 48.h * task.attempt }
-  }
-  $samtools {
-    time = { 120.h * task.attempt }
-  }
-  $picard {
-    time = { 24.h * task.attempt }
-  }
-  $countstat {
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $phantompeakqualtools {
-    time = { 24.h * task.attempt }
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $calculateNSCRSC {
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $deepTools {
-    time = { 120.h * task.attempt }
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $ngsplot {
-    time = { 120.h * task.attempt }
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $macs {
-    time = { 24.h * task.attempt }
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-  $multiqc {
-    errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'ignore' }
-  }
-
 }
 
 params {
   saveReference = true
-  // illumina iGenomes reference file paths on AWS
-  genomes {
-    'GRCh37'      { bwa = 's3://ngi-igenomes/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/' }
-    'GRCm38'      { bwa = 's3://ngi-igenomes/igenomes/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/' }
-    'TAIR10'      { bwa = 's3://ngi-igenomes/igenomes/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/BWAIndex/' }
-    'EB2'         { bwa = 's3://ngi-igenomes/igenomes/Bacillus_subtilis_168/Ensembl/EB2/Sequence/BWAIndex/' }
-    'UMD3.1'      { bwa = 's3://ngi-igenomes/igenomes/Bos_taurus/Ensembl/UMD3.1/Sequence/BWAIndex/' }
-    'WBcel235'    { bwa = 's3://ngi-igenomes/igenomes/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/BWAIndex/' }
-    'CanFam3.1'   { bwa = 's3://ngi-igenomes/igenomes/Canis_familiaris/Ensembl/CanFam3.1/Sequence/BWAIndex/' }
-    'GRCz10'      { bwa = 's3://ngi-igenomes/igenomes/Danio_rerio/Ensembl/GRCz10/Sequence/BWAIndex/' }
-    'BDGP6'       { bwa = 's3://ngi-igenomes/igenomes/Drosophila_melanogaster/Ensembl/BDGP6/Sequence/BWAIndex/' }
-    'EquCab2'     { bwa = 's3://ngi-igenomes/igenomes/Equus_caballus/Ensembl/EquCab2/Sequence/BWAIndex/' }
-    'EB1'         { bwa = 's3://ngi-igenomes/igenomes/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Sequence/BWAIndex/' }
-    'Galgal4'     { bwa = 's3://ngi-igenomes/igenomes/Gallus_gallus/Ensembl/Galgal4/Sequence/BWAIndex/' }
-    'Gm01'        { bwa = 's3://ngi-igenomes/igenomes/Glycine_max/Ensembl/Gm01/Sequence/BWAIndex/' }
-    'Mmul_1'      { bwa = 's3://ngi-igenomes/igenomes/Macaca_mulatta/Ensembl/Mmul_1/Sequence/BWAIndex/' }
-    'IRGSP-1.0'   { bwa = 's3://ngi-igenomes/igenomes/Oryza_sativa_japonica/Ensembl/IRGSP-1.0/Sequence/BWAIndex/' }
-    'CHIMP2.1.4'  { bwa = 's3://ngi-igenomes/igenomes/Pan_troglodytes/Ensembl/CHIMP2.1.4/Sequence/BWAIndex/' }
-    'Rnor_6.0'    { bwa = 's3://ngi-igenomes/igenomes/Rattus_norvegicus/Ensembl/Rnor_6.0/Sequence/BWAIndex/' }
-    'R64-1-1'     { bwa = 's3://ngi-igenomes/igenomes/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Sequence/BWAIndex/' }
-    'EF2'         { bwa = 's3://ngi-igenomes/igenomes/Schizosaccharomyces_pombe/Ensembl/EF2/Sequence/BWAIndex/' }
-    'Sbi1'        { bwa = 's3://ngi-igenomes/igenomes/Sorghum_bicolor/Ensembl/Sbi1/Sequence/BWAIndex/' }
-    'Sscrofa10.2' { bwa = 's3://ngi-igenomes/igenomes/Sus_scrofa/Ensembl/Sscrofa10.2/Sequence/BWAIndex/' }
-    'AGPv3'       { bwa = 's3://ngi-igenomes/igenomes/Zea_mays/Ensembl/AGPv3/Sequence/BWAIndex/' }
-  }
-
+  igenomes_base = 's3://ngi-igenomes/igenomes/'
+  // Max resources based on a typical AWS m4.2xlarge EC2 instance
+  // Customise with --max_memory, --max_cpus and --max_time (or overwrite with another config file)
+  max_memory = 32.GB
+  max_cpus = 8
+  max_time = 240.h
 }
