--- a/nextflow.config
+++ b/nextflow.config
@@ -12,10 +12,15 @@ vim: syntax=groovy
 
 profiles {
   standard {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/uppmax.config'
+    includeConfig 'conf/igenomes.config'
   }
   devel {
+    includeConfig 'conf/base.config'
+    includeConfig 'conf/uppmax.config'
     includeConfig 'conf/uppmax-devel.config'
+    includeConfig 'conf/igenomes.config'
   }
   docker {
     includeConfig 'conf/docker.config'
@@ -24,12 +29,17 @@ profiles {
     includeConfig 'conf/testing.config'
   }
   aws {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/aws.config'
+    includeConfig 'conf/igenomes.config'
   }
   none {
     // Don't load any config (for use with custom home configs)
   }
 }
+
+// Placeholder for Igenomes
+params.igenomes_base = "./iGenomes"
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
@@ -47,4 +57,22 @@ trace {
 manifest {
   homePage = 'https://github.com/SciLifeLab/NGI-ChIPseq'
   description = 'NGI-ChIPseq is a bioinformatics best-practice analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data analysis at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.'
+}
+
+// Function to ensure that resource requirements don't go beyond
+// a maximum limit
+def check_max(obj, type) {
+  if(type == 'memory'){
+    if(obj.compareTo(params.max_memory) == 1)
+      return params.max_memory
+    else
+      return obj
+  } else if(type == 'time'){
+    if(obj.compareTo(params.max_time) == 1)
+      return params.max_time
+    else
+      return obj
+  } else if(type == 'cpus'){
+    return Math.min( obj, params.max_cpus )
+  }
 }
