--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -12,77 +12,41 @@ vim: syntax=groovy
 
 process {
   executor = 'slurm'
-  cpus = { 2 * task.attempt }
-  memory = { 16.GB * task.attempt }
-  time = { 2.h * task.attempt }
   clusterOptions = { "-A $params.project " + (params.clusterOptions ?: '') }
-  errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
-  maxRetries = 3
-  maxErrors = '-1'
 
   // Process specific configuration
   $fastqc {
     module = ['bioinfo-tools', 'FastQC']
-    cpus = 1
-    memory = { 8.GB * task.attempt }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $trim_galore {
     module = ['bioinfo-tools', 'FastQC', 'TrimGalore']
-    time = { 8.h * task.attempt }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'terminate' }
   }
   $bwa{
     module = ['bioinfo-tools', 'bwa', 'samtools/1.3']
-    cpus = 8
-    memory = { 64.GB * task.attempt }
-    time = { 48.h * task.attempt }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
   $samtools {
     module = ['bioinfo-tools', 'samtools/1.3', 'BEDTools']
-    time = { 120.h * task.attempt }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   }
   $picard {
     module = ['bioinfo-tools', 'picard/2.0.1', 'samtools/1.3', 'BEDTools']
-    time = { 24.h * task.attempt }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
-  }
-  $countstat {
-    memory = { 4.GB * task.attempt }
   }
   $phantompeakqualtools {
     module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools']
-    time = { 24.h * task.attempt }
-  }
-  $calculateNSCRSC {
-    cpus = 1
-    memory = { 2.GB * task.attempt }
   }
   $deepTools {
     module = ['bioinfo-tools', 'deepTools']
-    cpus = 4
-    memory = { 32.GB * task.attempt }
-    time = { 120.h * task.attempt }
   }
   $ngsplot {
     module = ['bioinfo-tools', 'samtools/1.3', 'R/3.2.3', 'ngsplot']
-    time = { 120.h * task.attempt }
   }
   $macs {
     module = ['bioinfo-tools', 'MACS', 'samtools/1.3']
-    cpus = 4
-    memory = { 32.GB * task.attempt }
-    time = { 24.h * task.attempt }
   }
   // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
   // eg: Add the line: process.$multiqc.module = []
   $multiqc {
     module = ['bioinfo-tools', 'MultiQC']
-    executor = 'local'
-    cpus = 1
   }
 }
 
@@ -90,29 +54,11 @@ params {
   clusterOptions = false
   rlocation = "$HOME/R/nxtflow_libs/"
   saveReference = true
+  // Max resources requested by a normal node on milou. If you need more memory, run on a fat node using:
+  //   --clusterOptions "-C mem512GB" --max_memory "512GB"
+  max_memory = 128.GB
+  max_cpus = 16
+  max_time = 240.h
   // illumina iGenomes reference file paths on UPPMAX
-  genomes {
-    'GRCh37'      { bwa = '/sw/data/uppnex/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/' }
-    'GRCm38'      { bwa = '/sw/data/uppnex/igenomes/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/' }
-    'TAIR10'      { bwa = '/sw/data/uppnex/igenomes/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/BWAIndex/' }
-    'EB2'         { bwa = '/sw/data/uppnex/igenomes/Bacillus_subtilis_168/Ensembl/EB2/Sequence/BWAIndex/' }
-    'UMD3.1'      { bwa = '/sw/data/uppnex/igenomes/Bos_taurus/Ensembl/UMD3.1/Sequence/BWAIndex/' }
-    'WBcel235'    { bwa = '/sw/data/uppnex/igenomes/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/BWAIndex/' }
-    'CanFam3.1'   { bwa = '/sw/data/uppnex/igenomes/Canis_familiaris/Ensembl/CanFam3.1/Sequence/BWAIndex/' }
-    'GRCz10'      { bwa = '/sw/data/uppnex/igenomes/Danio_rerio/Ensembl/GRCz10/Sequence/BWAIndex/' }
-    'BDGP6'       { bwa = '/sw/data/uppnex/igenomes/Drosophila_melanogaster/Ensembl/BDGP6/Sequence/BWAIndex/' }
-    'EquCab2'     { bwa = '/sw/data/uppnex/igenomes/Equus_caballus/Ensembl/EquCab2/Sequence/BWAIndex/' }
-    'EB1'         { bwa = '/sw/data/uppnex/igenomes/Escherichia_coli_K_12_DH10B/Ensembl/EB1/Sequence/BWAIndex/' }
-    'Galgal4'     { bwa = '/sw/data/uppnex/igenomes/Gallus_gallus/Ensembl/Galgal4/Sequence/BWAIndex/' }
-    'Gm01'        { bwa = '/sw/data/uppnex/igenomes/Glycine_max/Ensembl/Gm01/Sequence/BWAIndex/' }
-    'Mmul_1'      { bwa = '/sw/data/uppnex/igenomes/Macaca_mulatta/Ensembl/Mmul_1/Sequence/BWAIndex/' }
-    'IRGSP-1.0'   { bwa = '/sw/data/uppnex/igenomes/Oryza_sativa_japonica/Ensembl/IRGSP-1.0/Sequence/BWAIndex/' }
-    'CHIMP2.1.4'  { bwa = '/sw/data/uppnex/igenomes/Pan_troglodytes/Ensembl/CHIMP2.1.4/Sequence/BWAIndex/' }
-    'Rnor_6.0'    { bwa = '/sw/data/uppnex/igenomes/Rattus_norvegicus/Ensembl/Rnor_6.0/Sequence/BWAIndex/' }
-    'R64-1-1'     { bwa = '/sw/data/uppnex/igenomes/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Sequence/BWAIndex/' }
-    'EF2'         { bwa = '/sw/data/uppnex/igenomes/Schizosaccharomyces_pombe/Ensembl/EF2/Sequence/BWAIndex/' }
-    'Sbi1'        { bwa = '/sw/data/uppnex/igenomes/Sorghum_bicolor/Ensembl/Sbi1/Sequence/BWAIndex/' }
-    'Sscrofa10.2' { bwa = '/sw/data/uppnex/igenomes/Sus_scrofa/Ensembl/Sscrofa10.2/Sequence/BWAIndex/' }
-    'AGPv3'       { bwa = '/sw/data/uppnex/igenomes/Zea_mays/Ensembl/AGPv3/Sequence/BWAIndex/' }
-  }
+  igenomes_base = '/sw/data/uppnex/igenomes/'
 }
