--- a/conf/base.config
+++ b/conf/base.config
@@ -11,8 +11,6 @@ vim: syntax=groovy
  * run on the logged in environment.
  */
 
-
-
 process {
   cpus = { check_max( 1 * task.attempt, 'cpus' ) }
   memory = { check_max( 8.GB * task.attempt, 'memory' ) }
@@ -22,46 +20,63 @@ process {
   maxRetries = 1
   maxErrors = '-1'
 
-  // Process specific configuration
+  // Environment modules and resource requirements
   $fastqc {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $trim_galore {
+    cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+    memory = { check_max( 16.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'terminate' }
   }
   $bwa{
     cpus = { check_max( 8 * task.attempt, 'cpus' ) }
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
-    time = { check_max( 48.h * task.attempt, 'time' ) }
+    time = { check_max( 24.h * task.attempt, 'time' ) }
   }
   $samtools {
-    time = { check_max( 120.h * task.attempt, 'time' ) }
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  $bwa_unmapped{
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $picard {
-    time = { check_max( 24.h * task.attempt, 'time' ) }
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
   }
   $countstat {
-    memory = { check_max( 4.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $phantompeakqualtools {
-    time = { check_max( 24.h * task.attempt, 'time' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $calculateNSCRSC {
-    memory = { check_max( 2.GB * task.attempt, 'memory' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $deepTools {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 120.h * task.attempt, 'time' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $ngsplot {
-    time = { check_max( 120.h * task.attempt, 'time' ) }
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $macs {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 24.h * task.attempt, 'time' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
   }
   $multiqc {
     executor = 'local'
