--- a/conf/docker.config
+++ b/conf/docker.config
@@ -14,7 +14,7 @@ docker {
 }
 process {
   container = 'scilifelab/ngi-chipseq'
-  // Not sure that this always works. May be better to config this manually.
+  executor = 'local'
   cpus = $executor.cpus
   memory = $executor.memory
   time = 48.h
