--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -4,56 +4,60 @@ vim: syntax=groovy
  * -------------------------------------------------
  *  Nextflow config file for UPPMAX (milou / irma)
  * -------------------------------------------------
- * Defines reference genomes, using iGenome paths
  * Imported under the default 'standard' Nextflow
  * profile in nextflow.config
  */
 
-
 process {
   executor = 'slurm'
-  clusterOptions = { "-A $params.project " + (params.clusterOptions ?: '') }
+  clusterOptions = { "-A $params.project ${params.clusterOptions ?: ''}" }
 
-  // Process specific configuration
+  // Environment modules and resource requirements
   $fastqc {
-    module = ['bioinfo-tools', 'FastQC']
+    module = ['bioinfo-tools', 'FastQC/0.7.2']
   }
   $trim_galore {
-    module = ['bioinfo-tools', 'FastQC', 'TrimGalore']
+    module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
   }
   $bwa{
-    module = ['bioinfo-tools', 'bwa', 'samtools/1.3']
+    module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
   }
   $samtools {
-    module = ['bioinfo-tools', 'samtools/1.3', 'BEDTools']
+    module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
+  }
+  $bwa_unmapped {
+    module = ['bioinfo-tools', 'samtools/1.5']
   }
   $picard {
-    module = ['bioinfo-tools', 'picard/2.0.1', 'samtools/1.3', 'BEDTools']
+    module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
+  }
+  $countstat {
   }
   $phantompeakqualtools {
-    module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools']
+    module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
+  }
+  $calculateNSCRSC {
   }
   $deepTools {
-    module = ['bioinfo-tools', 'deepTools']
+    module = ['bioinfo-tools', 'deepTools/2.5.1']
   }
   $ngsplot {
-    module = ['bioinfo-tools', 'samtools/1.3', 'R/3.2.3', 'ngsplot']
+    module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
   }
   $macs {
-    module = ['bioinfo-tools', 'MACS', 'samtools/1.3']
+    module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
   }
   // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
   // eg: Add the line: process.$multiqc.module = []
   $multiqc {
-    module = ['bioinfo-tools', 'MultiQC']
+    module = ['bioinfo-tools', 'MultiQC/1.2']
   }
 }
 
 params {
   clusterOptions = false
   rlocation = "$HOME/R/nxtflow_libs/"
-  saveReference = true
   // Max resources requested by a normal node on milou. If you need more memory, run on a fat node using:
   //   --clusterOptions "-C mem512GB" --max_memory "512GB"
   max_memory = 128.GB
