Adding configs for uppmax-devel and aws

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,9 @@ profiles {
     includeConfig 'conf/igenomes.config'
   }
   devel {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/uppmax-devel.config'
+    includeConfig 'conf/igenomes.config'
   }
   docker {
     includeConfig 'conf/docker.config'
@@ -30,7 +32,9 @@ profiles {
     includeConfig 'conf/testing.config'
   }
   aws {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/aws.config'
+    includeConfig 'conf/igenomes.config'
   }
   none {
     // Don't load any config (for use with custom home configs)
