Adding uppmax.config for uppmax-devel

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ profiles {
   devel {
     includeConfig 'conf/base.config'
     includeConfig 'conf/uppmax-devel.config'
+    includeConfig 'conf/uppmax.config'
     includeConfig 'conf/igenomes.config'
   }
   docker {
