--- a/conf/base.config
+++ b/conf/base.config
@@ -78,6 +78,14 @@ process {
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
+  $saturation {
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  $chippeakanno {
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
+  }
   $multiqc {
     executor = 'local'
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
