--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -45,7 +45,13 @@ process {
     module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
   }
   $macs {
+    module = ['bioinfo-tools', 'MACS/2.1.0']
+  }
+  $saturation {
     module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
+  }
+  $chippeakanno {
+    module = ['bioinfo-tools', 'R/3.2.3']
   }
   // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
