Improving the method of handling blacklist

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -12,8 +12,12 @@ vim: syntax=groovy
 params {
   // illumina iGenomes reference file paths on UPPMAX
   genomes {
-    'GRCh37'      { bwa = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/" }
-    'GRCm38'      { bwa = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/" }
+    'GRCh37'      { bwa = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/"
+                    blacklist = "${baseDir}/blacklists/hg19-blacklist.bed"
+                  }
+    'GRCm38'      { bwa = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/"
+                    blacklist = "${baseDir}/blacklists/mm10.blacklist.bed"
+                  }
     'TAIR10'      { bwa = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/BWAIndex/" }
     'EB2'         { bwa = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Sequence/BWAIndex/" }
     'UMD3.1'      { bwa = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Sequence/BWAIndex/" }
