--- a/conf/base.config
+++ b/conf/base.config
@@ -86,6 +86,10 @@ process {
   $chippeakanno {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
+  $get_software_versions {
+    executor = 'local'
+    errorStrategy = 'ignore'
+  }
   $multiqc {
     executor = 'local'
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
