Fix errors in scripts for reporting software versions; Add scripts for processing saturation analysis results

--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -50,6 +50,9 @@ process {
   $saturation {
     module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
   }
+  $saturation_r {
+    module = ['bioinfo-tools', 'R/3.2.3']
+  }
   $chippeakanno {
     module = ['bioinfo-tools', 'R/3.2.3']
   }
