--- a/conf/base.config
+++ b/conf/base.config
@@ -83,6 +83,9 @@ process {
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
+  $saturation_r {
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
+  }
   $chippeakanno {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
