Made uppmax config file more verbose. upgrade MultiQC version.

--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -13,58 +13,24 @@ process {
   clusterOptions = { "-A $params.project ${params.clusterOptions ?: ''}" }
 
   // Environment modules and resource requirements
-  $fastqc {
-    module = ['bioinfo-tools', 'FastQC/0.7.2']
-  }
-  $trim_galore {
-    module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
-  }
-  $bwa{
-    module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
-  }
-  $samtools {
-    module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
-  }
-  $bwa_unmapped {
-    module = ['bioinfo-tools', 'samtools/1.5']
-  }
-  $picard {
-    module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
-  }
-  $countstat {
-  }
-  $phantompeakqualtools {
-    module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
-  }
-  $calculateNSCRSC {
-  }
-  $deepTools {
-    module = ['bioinfo-tools', 'deepTools/2.5.1']
-  }
-  $ngsplot {
-    module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
-  }
-  $macs {
-    module = ['bioinfo-tools', 'MACS/2.1.0']
-  }
-  $saturation {
-    module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
-  }
-  $saturation_r {
-    module = ['bioinfo-tools', 'R/3.2.3']
-  }
-  $chippeakanno {
-    module = ['bioinfo-tools', 'R/3.2.3']
-  }
-  $get_software_versions {
-    module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2', 'bwa/0.7.8', 'samtools/1.5', 'BEDTools/2.26.0', 'picard/2.10.3', 'deepTools/2.5.1', 'ngsplot/2.61', 'MACS/2.1.0', 'MultiQC/1.2', 'python/2.7.6']
-  }
+  $fastqc.module = ['bioinfo-tools', 'FastQC/0.7.2']
+  $trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
+  $bw.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
+  $samtools.module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
+  $bwa_unmapped.module = ['bioinfo-tools', 'samtools/1.5']
+  $picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
+  $phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
+  $deepTools.module = ['bioinfo-tools', 'deepTools/2.5.1']
+  $ngsplot.module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
+  $macs.module = ['bioinfo-tools', 'MACS/2.1.0']
+  $saturation.module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
+  $saturation_r.module = ['bioinfo-tools', 'R/3.2.3']
+  $chippeakanno.module = ['bioinfo-tools', 'R/3.2.3']
+  $get_software_versions.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2', 'bwa/0.7.8', 'samtools/1.5', 'BEDTools/2.26.0', 'picard/2.10.3', 'deepTools/2.5.1', 'ngsplot/2.61', 'MACS/2.1.0', 'MultiQC/1.2', 'python/2.7.6']
   // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
   // eg: Add the line: process.$multiqc.module = []
-  $multiqc {
-    module = ['bioinfo-tools', 'MultiQC/1.2']
-  }
+  $multiqc.module = ['bioinfo-tools', 'MultiQC/1.3']
 }
 
 params {
