--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -15,7 +15,7 @@ process {
   // Environment modules and resource requirements
   $fastqc.module = ['bioinfo-tools', 'FastQC/0.7.2']
   $trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
-  $bw.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
+  $bwa.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
   $samtools.module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
   $bwa_unmapped.module = ['bioinfo-tools', 'samtools/1.5']
   $picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
