Use Singularity instead of environment modules

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -13,7 +13,7 @@ docker {
   enabled = true
 }
 process {
-  container = 'scilifelab/ngi-chipseq'
+  container = wf_container
   executor = 'local'
   cpus = $executor.cpus
   memory = $executor.memory
