--- a/conf/testing.config
+++ b/conf/testing.config
@@ -10,7 +10,7 @@ docker {
   enabled = true
 }
 process {
-  container = 'scilifelab/ngi-chipseq'
+  container = wf_container
   cpus = 2
   memory = 7.GB
   time = 48.h
