--- a/conf/uppmax.config
+++ b/conf/uppmax.config
@@ -20,7 +20,7 @@ process {
 
 params {
   clusterOptions = false
-  rlocation = "$HOME/R/nxtflow_libs/"
+  rlocation = "/usr/local/lib/R/library"
   // Max resources requested by a normal node on milou. If you need more memory, run on a fat node using:
   //   --clusterOptions "-C mem512GB" --max_memory "512GB"
   max_memory = 128.GB
