Move ChIPseq software version numbers to the bottom of the MultiQC report.

--- a/conf/multiqc_config.yaml
+++ b/conf/multiqc_config.yaml
@@ -21,3 +21,6 @@ custom_data:
         headers:
             NSC: {}
             RSC: {}
+report_section_order:
+    ngi-chipseq:
+        order: -1000
