Change the method for counting mapped reads

--- a/conf/uppmax-modules.config
+++ b/conf/uppmax-modules.config
@@ -16,7 +16,7 @@ process {
   $trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
   $bwa.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
   $samtools.module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
-  $bwa_unmapped.module = ['bioinfo-tools', 'samtools/1.5']
+  $bwa_mapped.module = ['bioinfo-tools', 'samtools/1.5']
   $picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
   $phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
   $deepTools.module = ['bioinfo-tools', 'deepTools/2.5.1']
