--- a/conf/base.config
+++ b/conf/base.config
@@ -39,7 +39,7 @@ process {
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $bwa_unmapped{
+  $bwa_mapped{
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
