--- a/nextflow.config
+++ b/nextflow.config
@@ -13,8 +13,7 @@ vim: syntax=groovy
 
 // Variable to specify the docker / singularity image tag to use
 // Picks up on use of -r 1.3 in nextflow command
-container_tag = workflow.revision ? workflow.revision : 'latest'
-wf_container = "scilifelab/ngi-chipseq:${container_tag}"
+wf_container = { "scilifelab/ngi-chipseq:${workflow.revision ? workflow.revision : 'latest'" }
 
 // Global default params, used in configs
 params {
