Reduce the required memory for get_software_versions and multiqc

--- a/conf/base.config
+++ b/conf/base.config
@@ -90,10 +90,12 @@ process {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
   $get_software_versions {
+    memory = { check_max( 2.GB * task.attempt, 'memory' ) }
     executor = 'local'
     errorStrategy = 'ignore'
   }
   $multiqc {
+    memory = { check_max( 2.GB * task.attempt, 'memory' ) }
     executor = 'local'
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
