Change the method for annotating peaks

--- a/conf/base.config
+++ b/conf/base.config
@@ -86,6 +86,9 @@ process {
   $saturation_r {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
+  $prepare_anno {
+    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
+  }
   $chippeakanno {
     errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
   }
