--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -14,9 +14,11 @@ params {
   genomes {
     'GRCh37'      { bwa = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Sequence/BWAIndex/"
                     blacklist = "${baseDir}/blacklists/hg19-blacklist.bed"
+                    gtf = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf"
                   }
     'GRCm38'      { bwa = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/"
                     blacklist = "${baseDir}/blacklists/mm10.blacklist.bed"
+                    gtf = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.gtf"
                   }
     'TAIR10'      { bwa = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/BWAIndex/" }
     'EB2'         { bwa = "${params.igenomes_base}/Bacillus_subtilis_168/Ensembl/EB2/Sequence/BWAIndex/" }
