--- a/nextflow.config
+++ b/nextflow.config
@@ -11,14 +11,28 @@ vim: syntax=groovy
  */
 
 
-// Variable to specify the docker / singularity image tag to use
-// Picks up on use of -r 1.3 in nextflow command
-wf_container = { "scilifelab/ngi-chipseq:${workflow.revision ? workflow.revision : 'latest'}" }
-
 // Global default params, used in configs
 params {
-    outdir = './results'
-    igenomes_base = "./iGenomes"
+  version = '1.4dev' //Pipeline version
+  nf_required_version = '0.27.6' //Minimum version of Nextflow required
+  container = 'nfcore/chipseq:latest' // Container slug. Stable releases should specify release tag!
+
+  reads = "data/*{1,2}*.fastq.gz"
+  macsconfig = "data/macsconfig"
+  multiqc_config = "$baseDir/conf/multiqc_config.yaml"
+  extendReadsLen = 100
+  notrim = false
+  allow_multi_align = false
+  saveReference = false
+  saveTrimmed = false
+  saveAlignedIntermediates = false
+  saturation = false
+  broad = false
+  blacklist_filtering = false
+  outdir = './results'
+  igenomes_base = "./iGenomes"
+  email = false
+  plaintext_email = false
 }
 
 profiles {
@@ -65,16 +79,25 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
   enabled = true
-  file = "${params.outdir}/NGI-ChIPseq_timeline.html"
+  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_timeline.html"
+}
+report {
+  enabled = true
+  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_report.html"
 }
 trace {
   enabled = true
-  file = "${params.outdir}/NGI-ChIPseq_trace.txt"
+  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_trace.txt"
+}
+dag {
+  enabled = true
+  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_DAG.svg"
 }
 
 manifest {
-  homePage = 'https://github.com/SciLifeLab/NGI-ChIPseq'
-  description = 'NGI-ChIPseq is a bioinformatics best-practice analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data analysis at the National Genomics Infastructure at SciLifeLab Stockholm, Sweden.'
+  homePage = 'https://github.com/nf-core/ChIPseq'
+  description = 'Analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data'
+  mainScript = 'main.nf'
 }
 
 // Function to ensure that resource requirements don't go beyond
