NGI-ChIPseq > nf-core/ChIPseq

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@
 vim: syntax=groovy
 -*- mode: groovy;-*-
  * -------------------------------------------------
- *  NGI-ChIPseq Nextflow config file
+ *  nf-core/ChIPseq Nextflow config file
  * -------------------------------------------------
  * Default config options for all environments.
  * Cluster-specific config options should be saved
