Hopefully fixed issues with Docker profile on chipseq

--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,9 @@ profiles {
     includeConfig 'conf/igenomes.config'
   }
   docker {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/docker.config'
+    includeConfig 'conf/igenomes.config'
   }
   testing {
     includeConfig 'conf/testing.config'
