--- a/conf/docker.config
+++ b/conf/docker.config
@@ -10,10 +10,7 @@
 docker {
   enabled = true
 }
-process {
-  container = wf_container
-  executor = 'local'
-  cpus = $executor.cpus
-  memory = $executor.memory
-  time = 48.h
+
+params {
+  igenomes_Base = 's3://ngi-igenomes/igenomes/'
 }
