--- a/environment.yml
+++ b/environment.yml
@@ -18,29 +18,33 @@ dependencies:
   - deeptools=3.0.2
   - macs2=2.1.1
   - multiqc=1.5
+  - conda-forge::r-catools=1.17.1
+  - conda-forge::r-snow=0.4
+  - conda-forge::r-rutils=2.6.0
+  - conda-forge::r-stringr=1.3.0
+  - conda-forge::r-markdown-feedstock=0.8
+  - conda-forge::r-evaluate=0.10.1
+  - conda-forge::r-domc-feedstock=1.3.5
+  - conda-forge::r-ggplot2-feedstock=2.2.1
+  - conda-forge::r-knitr-feedstock=1.20
+  - conda-forge::r-rmysql-feedstock=0.10.13
+  - bioconda::bioconductor-bsgenome=1.46.0
+  - bioconda::bioconductor-rsamtools=1.30.0
+  - bioconda::bioconductor-shortread=1.36.0
+  - bioconda::bioconductor-genomicranges=1.28.6
+  - bioconda::bioconductor-genomicfeatures=1.30.3
+  - bioconda::bioconductor-ensembldb=2.2.2
+  - bioconda::bioconductor-chippeakanno=3.12.0
+  - bioconda::bioconductor-biomart=2.34.2
+  - bioconda::bioconductor-rtracklayer=1.38.3
+  - bioconda::bioconductor-bsgenome.hsapiens.ucsc.hg19=1.4.0
+  - bioconda::bioconductor-org.hs.eg.db=3.5.0
+  - bioconda::bioconductor-bsgenome.mmusculus.ucsc.mm10=1.4.0
+  - bioconda::bioconductor-org.mm.eg.db=3.5.0
+
+
 
 # TODO:
+
+
 # - phantompeakqualtools
-# - R: caTools
-# - R: snow
-# - R: doMC
-# - R: utils
-# - R: stringr
-# - R: markdown
-# - R: evaluate
-# - R: ggplot2
-# - R: knitr
-# - R: RMySQL
-# - Bioconductor: BSgenome
-# - Bioconductor: Rsamtools
-# - Bioconductor: ShortRead
-# - Bioconductor: GenomicRanges
-# - Bioconductor: GenomicFeatures
-# - Bioconductor: ensembldb
-# - Bioconductor: ChIPpeakAnno
-# - Bioconductor: biomaRt
-# - Bioconductor: rtracklayer
-# - Bioconductor: BSgenome.Hsapiens.UCSC.hg19
-# - Bioconductor: org.Hs.eg.db
-# - Bioconductor: BSgenome.Mmusculus.UCSC.mm10
-# - Bioconductor: org.Mm.eg.db
