Cleaned package names in docker file

--- a/environment.yml
+++ b/environment.yml
@@ -20,14 +20,14 @@ dependencies:
   - multiqc=1.5
   - conda-forge::r-catools=1.17.1
   - conda-forge::r-snow=0.4
-  - conda-forge::r-rutils=2.6.0
+  - conda-forge::r-r.utils=2.6.0
   - conda-forge::r-stringr=1.3.0
-  - conda-forge::r-markdown-feedstock=0.8
+  - conda-forge::r-markdown=0.8
   - conda-forge::r-evaluate=0.10.1
-  - conda-forge::r-domc-feedstock=1.3.5
-  - conda-forge::r-ggplot2-feedstock=2.2.1
-  - conda-forge::r-knitr-feedstock=1.20
-  - conda-forge::r-rmysql-feedstock=0.10.13
+  - conda-forge::r-domc=1.3.5
+  - conda-forge::r-ggplot2=2.2.1
+  - conda-forge::r-knitr=1.20
+  - conda-forge::r-rmysql=0.10.13
   - bioconda::bioconductor-bsgenome=1.46.0
   - bioconda::bioconductor-rsamtools=1.30.0
   - bioconda::bioconductor-shortread=1.36.0
