--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -14,6 +14,9 @@ params {
                     blacklist = "${baseDir}/blacklists/hg19-blacklist.bed"
                     gtf = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf"
                   }
+    'GRCh38'      { bwa = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Sequence/BWAIndex/"
+                    gtf = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
+                  }                  
     'GRCm38'      { bwa = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/BWAIndex/"
                     blacklist = "${baseDir}/blacklists/mm10.blacklist.bed"
                     gtf = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.gtf"
