--- a/nextflow.config
+++ b/nextflow.config
@@ -104,16 +104,31 @@ manifest {
 // a maximum limit
 def check_max(obj, type) {
   if(type == 'memory'){
-    if(obj.compareTo(params.max_memory) == 1)
-      return params.max_memory
-    else
+    try {
+      if(obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
+        return params.max_memory as nextflow.util.MemoryUnit
+      else
+        return obj
+    } catch (all) {
+      println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
       return obj
+    }
   } else if(type == 'time'){
-    if(obj.compareTo(params.max_time) == 1)
-      return params.max_time
-    else
+    try {
+      if(obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
+        return params.max_time as nextflow.util.Duration
+      else
+        return obj
+    } catch (all) {
+      println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
       return obj
+    }
   } else if(type == 'cpus'){
-    return Math.min( obj, params.max_cpus )
+    try {
+      return Math.min( obj, params.max_cpus as int )
+    } catch (all) {
+      println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+      return obj
+    }
   }
 }
