--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,7 @@ dependencies:
   - conda-forge::r-ggplot2=2.2.1
   - conda-forge::r-knitr=1.20
   - conda-forge::r-rmysql=0.10.13
+  - conda-forge::r-doparallel=1.0.11
   - bioconda::bioconductor-bsgenome=1.46.0
   - bioconda::bioconductor-rsamtools=1.30.0
   - bioconda::bioconductor-shortread=1.36.0
