--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,11 @@ install:
 
 env:
   - NXF_VER=0.30.1
-  - ''
 
 script:
+    # Lint the pipeline code
     - "nf-core lint ${TRAVIS_BUILD_DIR}"
-    - "./run_test.sh"
+    # Run, build reference genome
+    - nextflow run ${TRAVIS_BUILD_DIR} -profile test,docker --saveReference
+    # Basic run with supplied reference
+    - nextflow run ${TRAVIS_BUILD_DIR} -profile test,docker --bwa_index ${TRAVIS_BUILD_DIR}/tests/results/reference_genome/BWAIndex/
