Add profile test

--- a/nextflow.config
+++ b/nextflow.config
@@ -60,7 +60,8 @@ profiles {
     includeConfig 'conf/docker.config'
     includeConfig 'conf/igenomes.config'
   }
-  testing {
+  test {
+    includeConfig 'conf/base.config'
     includeConfig 'conf/testing.config'
   }
   aws {
