--- a/nextflow.config
+++ b/nextflow.config
@@ -62,7 +62,7 @@ profiles {
   }
   test {
     includeConfig 'conf/base.config'
-    includeConfig 'conf/testing.config'
+    includeConfig 'conf/test.config'
   }
   aws {
     includeConfig 'conf/base.config'
