Remove old profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,9 @@ profiles {
   standard {
     includeConfig 'conf/base.config'
   }
+  conda { process.conda = "$baseDir/environment.yml" }
+  docker { docker.enabled = true }
+  singularity { singularity.enabled = true }
   uppmax {
     includeConfig 'conf/base.config'
     includeConfig 'conf/uppmax.config'
@@ -53,11 +56,6 @@ profiles {
     includeConfig 'conf/base.config'
     includeConfig 'conf/uppmax.config'
     includeConfig 'conf/uppmax-devel.config'
-    includeConfig 'conf/igenomes.config'
-  }
-  docker {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/docker.config'
     includeConfig 'conf/igenomes.config'
   }
   test {
