--- a/conf/test.config
+++ b/conf/test.config
@@ -13,6 +13,7 @@ params {
   max_time = 48.h
   // Input data
   singleEnd = false
+  genome = EF4
   readPaths = [
     ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz']],
     ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
