Adapt Testcases to follow newer structure

--- a/nextflow.config
+++ b/nextflow.config
@@ -60,6 +60,7 @@ profiles {
   }
   test {
     includeConfig 'conf/base.config'
+    includeConfig 'conf/igenomes.config'
     includeConfig 'conf/test.config'
   }
   aws {
