--- a/conf/test.config
+++ b/conf/test.config
@@ -8,6 +8,7 @@
  */
 
 params {
+  genome = 'GRCh37'
   max_cpus = 2
   max_memory = 6.GB
   max_time = 48.h
@@ -19,5 +20,5 @@ params {
   ]
   // Genome references
   fasta = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genome.fa'
-  macsconfig = 'https://github.com/nf-core/test-datasets/blob/chipseq/macsconfig.txt'
+  macsconfig = 'https://github.com/nf-core/test-datasets/raw/chipseq/macsconfig.txt'
 }
