Fix for path in igenomes

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -42,6 +42,6 @@ params {
     'Sscrofa10.2' { bwa = "${params.igenomes_base}/Sus_scrofa/Ensembl/Sscrofa10.2/Sequence/BWAIndex/" }
     'AGPv3'       { bwa = "${params.igenomes_base}/Zea_mays/Ensembl/AGPv3/Sequence/BWAIndex/" }
     'EF4'         { bwa = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/BWAIndex/"
-                    gtf = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Annotation/Genes/genes.gtf}
+                    gtf = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Annotation/Genes/genes.gtf"}
   }
 }
