Fix for iGenome Params

--- a/conf/base.config
+++ b/conf/base.config
@@ -9,6 +9,15 @@
  * run on the logged in environment.
  */
 
+// Defaults config params, may be overwritten by later configs
+params {
+  max_memory = 128.GB
+  max_cpus = 16
+  max_time = 240.h
+  igenomes_base = 's3://ngi-igenomes/igenomes/'
+}
+
+
 process {
 
   container = params.container
@@ -102,9 +111,3 @@ process {
   }
 }
 
-params {
-  // Defaults only, expecting to be overwritten
-  max_memory = 128.GB
-  max_cpus = 16
-  max_time = 240.h
-}
