--- a/conf/test.config
+++ b/conf/test.config
@@ -15,8 +15,7 @@ params {
   // Input data
   singleEnd = false
   readPaths = [
-    ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz']],
-    ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
+    ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
   ]
   // Genome references
   fasta = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genome.fa'
