process.container was missing from baseconfig

--- a/conf/base.config
+++ b/conf/base.config
@@ -23,6 +23,7 @@ process {
   cpus = { check_max( 1 * task.attempt, 'cpus' ) }
   memory = { check_max( 8.GB * task.attempt, 'memory' ) }
   time = { check_max( 2.h * task.attempt, 'time' ) }
+  container = params.container
 
   errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
   maxRetries = 1
