deepTools incompatible with Samtools > 1.7, so stick to 1.7

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
   extendReadsLen = 100
   notrim = false
   allow_multi_align = false
+  singleEnd = false
   saveReference = false
   saveTrimmed = false
   saveAlignedIntermediates = false
