Bugtesting and nf-core updates for bioconda branch PR

--- a/conf/test.config
+++ b/conf/test.config
@@ -15,7 +15,10 @@ params {
   // Input data
   singleEnd = false
   readPaths = [
-    ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
+    ['SRR5204807_Spt5-ChIP_IP1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
+    ['SRR5204808_Spt5-ChIP_IP2', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204808_Spt5-ChIP_IP2_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204808_Spt5-ChIP_IP2_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
+    ['SRR5204809_Spt5-ChIP_Input1', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204809_Spt5-ChIP_Input1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204809_Spt5-ChIP_Input1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
+    ['SRR5204810_Spt5-ChIP_Input2', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204810_Spt5-ChIP_Input2_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204810_Spt5-ChIP_Input2_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
   ]
   // Genome references
   fasta = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genome.fa'
