nf-core/chipseq, not ChIPseq

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
  * -------------------------------------------------
- *  nf-core/ChIPseq Nextflow config file
+ *  nf-core/chipseq Nextflow config file
  * -------------------------------------------------
  * Default config options for all environments.
  * Cluster-specific config options should be saved
@@ -80,23 +80,23 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_timeline.html"
+  file = "${params.outdir}/pipeline_info/nfcore-chipseq_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_report.html"
+  file = "${params.outdir}/pipeline_info/nfcore-chipseq_report.html"
 }
 trace {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_trace.txt"
+  file = "${params.outdir}/pipeline_info/nfcore-chipseq_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-ChIPseq_DAG.svg"
+  file = "${params.outdir}/pipeline_info/nfcore-chipseq_DAG.svg"
 }
 
 manifest {
-  homePage = 'https://github.com/nf-core/ChIPseq'
+  homePage = 'https://github.com/nf-core/chipseq'
   description = 'Analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data'
   mainScript = 'main.nf'
 }
