Fix broken makeBWAindex process. Minor bugfixes.

--- a/conf/base.config
+++ b/conf/base.config
@@ -25,14 +25,11 @@ process {
   time = { check_max( 2.h * task.attempt, 'time' ) }
   container = params.container
 
-  errorStrategy = { task.exitStatus == 143 ? 'retry' : 'finish' }
+  errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'terminate' }
   maxRetries = 1
   maxErrors = '-1'
 
   // Environment modules and resource requirements
-  $fastqc {
-    errorStrategy = { task.exitStatus == 143 ? 'retry' : 'ignore' }
-  }
   $trim_galore {
     cpus = { check_max( 2 * task.attempt, 'cpus' ) }
     memory = { check_max( 16.GB * task.attempt, 'memory' ) }
@@ -86,11 +83,9 @@ process {
   }
   $get_software_versions {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
-    executor = 'local'
     errorStrategy = 'ignore'
   }
   $multiqc {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
-    executor = 'local'
   }
 }
