Add option for sequencing center

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,7 @@ params {
   broad = false
   largeRef = false
   blacklist_filtering = false
+  seqCenter = false
   outdir = './results'
   igenomes_base = "./iGenomes"
   email = false
