Add option to skip duplication removal

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
   extendReadsLen = 100
   notrim = false
   allow_multi_align = false
+  skipDupRemoval = false
   singleEnd = false
   saveReference = false
   saveTrimmed = false
