Get the tests to pass

--- a/conf/base.config
+++ b/conf/base.config
@@ -30,62 +30,62 @@ process {
   maxErrors = '-1'
 
   // Environment modules and resource requirements
-  $trim_galore {
+  withName:trim_galore {
     cpus = { check_max( 2 * task.attempt, 'cpus' ) }
     memory = { check_max( 16.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $bwa{
+  withName:bwa{
     cpus = { check_max( 8 * task.attempt, 'cpus' ) }
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
   }
-  $samtools {
+  withName:samtools {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $bwa_mapped{
+  withName:bwa_mapped{
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $picard {
+  withName:picard {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $countstat {
+  withName:countstat {
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $phantompeakqualtools {
+  withName:phantompeakqualtools {
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $deepTools {
+  withName:deepTools {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $ngsplot {
+  withName:ngsplot {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $macs {
+  withName:macs {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $saturation {
+  withName:saturation {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  $get_software_versions {
+  withName:get_software_versions {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
     errorStrategy = 'ignore'
   }
-  $multiqc {
+  withName:multiqc {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
   }
 }
