--- a/conf/uppmax-modules.config
+++ b/conf/uppmax-modules.config
@@ -10,20 +10,20 @@ singularity {
 
 process {
   // Environment modules and resource requirements
-  $fastqc.module = ['bioinfo-tools', 'FastQC/0.7.2']
-  $trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
-  $bwa.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
-  $samtools.module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
-  $bwa_mapped.module = ['bioinfo-tools', 'samtools/1.5']
-  $picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
-  $phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
-  $deepTools.module = ['bioinfo-tools', 'deepTools/2.5.1']
-  $ngsplot.module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
-  $macs.module = ['bioinfo-tools', 'MACS/2.1.0']
-  $saturation.module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
-  $saturation_r.module = ['bioinfo-tools', 'R/3.2.3']
-  $chippeakanno.module = ['bioinfo-tools', 'R/3.2.3']
-  $get_software_versions.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2', 'bwa/0.7.8', 'samtools/1.5', 'BEDTools/2.26.0', 'picard/2.10.3', 'deepTools/2.5.1', 'ngsplot/2.61', 'MACS/2.1.0', 'MultiQC/1.2', 'python/2.7.6']
+  withName:fastqc.module = ['bioinfo-tools', 'FastQC/0.7.2']
+  withName:trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2']
+  withName:bwa.module = ['bioinfo-tools', 'bwa/0.7.8', 'samtools/1.5']
+  withName:samtools.module = ['bioinfo-tools', 'samtools/1.5', 'BEDTools/2.26.0']
+  withName:bwa_mapped.module = ['bioinfo-tools', 'samtools/1.5']
+  withName:picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.5', 'BEDTools/2.26.0']
+  withName:phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
+  withName:deepTools.module = ['bioinfo-tools', 'deepTools/2.5.1']
+  withName:ngsplot.module = ['bioinfo-tools', 'samtools/1.5', 'R/3.2.3', 'ngsplot/2.61']
+  withName:macs.module = ['bioinfo-tools', 'MACS/2.1.0']
+  withName:saturation.module = ['bioinfo-tools', 'MACS/2.1.0', 'samtools/1.5']
+  withName:saturation_r.module = ['bioinfo-tools', 'R/3.2.3']
+  withName:chippeakanno.module = ['bioinfo-tools', 'R/3.2.3']
+  withName:get_software_versions.module = ['bioinfo-tools', 'TrimGalore/0.4.1', 'FastQC/0.7.2', 'bwa/0.7.8', 'samtools/1.5', 'BEDTools/2.26.0', 'picard/2.10.3', 'deepTools/2.5.1', 'ngsplot/2.61', 'MACS/2.1.0', 'MultiQC/1.2', 'python/2.7.6']
   // NB: Overwrite this in a config file in the working directory (nextflow.config) or with -c
   // if you have your own installation of MultiQC outside of the environment module system.
   // eg: Add the line: process.$multiqc.module = []
