--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,6 @@
 
 // Global default params, used in configs
 params {
-  version = '1.4dev' //Pipeline version
-  nf_required_version = '0.30.1' //Minimum version of Nextflow required
   container = 'nfcore/chipseq:latest' // Container slug. Stable releases should specify release tag!
 
   reads = "data/*{1,2}*.fastq.gz"
@@ -97,9 +95,12 @@ dag {
 }
 
 manifest {
-  homePage = 'https://github.com/nf-core/chipseq'
+  name = 'nf-core/chipseq'
   description = 'Analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data'
+  homePage = 'https://github.com/nf-core/chipseq'
+  pipelineVersion = '1.4dev'
   mainScript = 'main.nf'
+  nextflowVersion = '>=0.31.1'
 }
 
 // Function to ensure that resource requirements don't go beyond
