Remove manifest.pipelineVersion from main.nf
Hopefully we can go back to only using this in a future version of nextflow.

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,8 @@ params {
   igenomes_base = "./iGenomes"
   email = false
   plaintext_email = false
+  // TODO: Remove this if/when we can. See https://github.com/nextflow-io/nextflow/issues/840
+  pipelineVersion = '1.0'
 }
 
 profiles {
@@ -101,7 +103,8 @@ manifest {
   name = 'nf-core/chipseq'
   description = 'Analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data'
   homePage = 'https://github.com/nf-core/chipseq'
-  pipelineVersion = '1.0'
+  // TODO: Define only here if/when we can. See https://github.com/nextflow-io/nextflow/issues/840
+  pipelineVersion = params.pipelineVersion
   mainScript = 'main.nf'
   nextflowVersion = '>=0.31.1'
 }
