--- a/conf/test.config
+++ b/conf/test.config
@@ -22,4 +22,7 @@ params {
   // Genome references
   fasta = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genome.fa'
   macsconfig = 'https://github.com/nf-core/test-datasets/raw/chipseq/macsconfig.txt'
+  macsgsize = "9.7e6"
+  gtf = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genes.gtf'
+  bed = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genes.bed'
 }
