Fix duplicated process samtools; fix task.memory == null issue

--- a/conf/uppmax-modules.config
+++ b/conf/uppmax-modules.config
@@ -16,7 +16,8 @@ process {
   withName:fastqc.module = ['bioinfo-tools', 'FastQC/0.11.5']
   withName:trim_galore.module = ['bioinfo-tools', 'TrimGalore/0.4.4', 'FastQC/0.11.5']
   withName:bwa.module = ['bioinfo-tools', 'bwa/0.7.17', 'samtools/1.8']
-  withName:samtools.module = ['bioinfo-tools', 'samtools/1.8', 'BEDTools/2.27.1']
+  withName:samtools_chipseq.module = ['bioinfo-tools', 'samtools/1.8', 'BEDTools/2.27.1']
+  withName:samtools_atacseq.module = ['bioinfo-tools', 'samtools/1.8', 'BEDTools/2.27.1']
   withName:bwa_mapped.module = ['bioinfo-tools', 'samtools/1.8']
   withName:picard.module = ['bioinfo-tools', 'picard/2.10.3', 'samtools/1.8', 'BEDTools/2.27.1']
   withName:phantompeakqualtools.module = ['bioinfo-tools', 'R/3.2.3', 'phantompeakqualtools/1.1']
