--- a/conf/base.config
+++ b/conf/base.config
@@ -41,7 +41,12 @@ process {
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
   }
-  withName:samtools {
+  withName:samtools_chipseq {
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  withName:samtools_atacseq {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
