Modified docs and assets

--- a/conf/base.config
+++ b/conf/base.config
@@ -36,7 +36,7 @@ process {
     memory = { check_max( 16.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  withName:bwa{
+  withName:bwa {
     cpus = { check_max( 8 * task.attempt, 'cpus' ) }
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
@@ -46,7 +46,7 @@ process {
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  withName:bwa_mapped{
+  withName:bwa_mapped {
     cpus = { check_max( 4 * task.attempt, 'cpus' ) }
     memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
@@ -80,8 +80,10 @@ process {
   withName:get_software_versions {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
     errorStrategy = 'ignore'
+    cache = false
   }
   withName:multiqc {
     memory = { check_max( 2.GB * task.attempt, 'memory' ) }
+    errorStrategy = 'ignore'
   }
 }
