--- a/nextflow.config
+++ b/nextflow.config
@@ -13,100 +13,115 @@
 params {
   container = 'nfcore/chipseq:latest' // Container slug. Stable releases should specify release tag!
 
+  // Options: Generic
   reads = "data/*{1,2}*.fastq.gz"
   readPaths = false
   macsconfig = "data/macsconfig"
-  multiqc_config = "$baseDir/conf/multiqc_config.yaml"
-  extendReadsLen = 100
-  notrim = false
+
+  singleEnd = false
   allow_multi_align = false
   skipDupRemoval = false
-  singleEnd = false
-  saveReference = false
-  saveTrimmed = false
+  seqCenter = false
   saveAlignedIntermediates = false
-  saturation = false
+
   broad = false
+  saturation = false
+  extendReadsLen = 100
+
+  // Options: References
+  genome = false
   largeRef = false
   blacklist_filtering = false
-  seqCenter = false
+  saveReference = false
+
+  // Options: Trimming
+  clip_r1 = 0
+  clip_r2 = 0
+  three_prime_clip_r1 = 0
+  three_prime_clip_r2 = 0
+  notrim = false
+  saveTrimmed = false
+
+  // Options: Other
   outdir = './results'
-  igenomes_base = "./iGenomes"
   email = false
+  rlocation = false
+  clusterOptions = false
+  name = false
   plaintext_email = false
-  // TODO: Remove this if/when we can. See https://github.com/nextflow-io/nextflow/issues/840
-  pipelineVersion = '1.0'
+
+  // Options: Config
+  multiqc_config = "$baseDir/assets/multiqc_config.yaml"
+
+  // Options: AWSBatch
+  awsqueue = false
+  awsregion = 'eu-west-1'
+
+  // Options: Default
+  help = false
+  tracedir = "${params.outdir}/pipeline_info"
+  igenomes_base = "./iGenomes"
+  igenomesIgnore = false
+  custom_config_version = 'master'
+  config_profile_description = false
+  config_profile_contact = false
+  config_profile_url = false
+
 }
 
+// Load base.config by default for all pipelines
+includeConfig 'conf/base.config'
+
+// Load nf-core custom profiles from different Institutions
+includeConfig "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}/nfcore_custom.config"
+
 profiles {
-
-  standard {
-    includeConfig 'conf/base.config'
-  }
+  awsbatch { includeConfig 'conf/awsbatch.config' }
   conda { process.conda = "$baseDir/environment.yml" }
-  docker { docker.enabled = true }
-  singularity { singularity.enabled = true }
-  uppmax {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/uppmax.config'
-    includeConfig 'conf/igenomes.config'
+  debug { process.beforeScript = 'echo $HOSTNAME' }
+  docker {
+    docker.enabled = true
+    process.container = params.container
   }
-  uppmax_modules {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/uppmax.config'
-    includeConfig 'conf/uppmax-modules.config'
-    includeConfig 'conf/igenomes.config'
+  singularity {
+    singularity.enabled = true
+    process.container = {"shub://${params.container.replace('nfcore', 'nf-core')}"}
   }
-  uppmax_devel {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/uppmax.config'
-    includeConfig 'conf/uppmax-devel.config'
-    includeConfig 'conf/igenomes.config'
-  }
-  test {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/test.config'
-    includeConfig 'conf/igenomes.config'
-  }
-  aws {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/aws.config'
-    includeConfig 'conf/igenomes.config'
-  }
-  none {
-    // Don't load any config (for use with custom home configs)
-  }
-
+  test { includeConfig 'conf/test.config' }
 }
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
+// Load igenomes.config if required
+if(!params.igenomesIgnore){
+  includeConfig 'conf/igenomes.config'
+}
+
 timeline {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-chipseq_timeline.html"
+  file = "${params.tracedir}/nf-core/chipseq_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-chipseq_report.html"
+  file = "${params.tracedir}/nf-core/chipseq_report.html"
 }
 trace {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-chipseq_trace.txt"
+  file = "${params.tracedir}/nf-core/chipseq_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.outdir}/pipeline_info/nfcore-chipseq_DAG.svg"
+  file = "${params.tracedir}/nf-core/chipseq_dag.svg"
 }
 
 manifest {
   name = 'nf-core/chipseq'
-  description = 'Analysis pipeline used for ChIP-seq (chromatin immunoprecipitation sequencing) data'
   homePage = 'https://github.com/nf-core/chipseq'
-  // TODO: Define only here if/when we can. See https://github.com/nextflow-io/nextflow/issues/840
-  pipelineVersion = params.pipelineVersion
+  description = 'Analysis pipeline used for ChIP-seq data'
   mainScript = 'main.nf'
-  nextflowVersion = '>=0.31.1'
+  nextflowVersion = '>=0.32.0'
+  version = '1.0dev'
 }
 
 // Function to ensure that resource requirements don't go beyond
