Made deepTools plotFingerprint --numberOfSamples configurable, smaller in tests

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ params {
   seqCenter = false
   saveAlignedIntermediates = false
 
+  fingerprintBins = 50000
   broad = false
   saturation = false
   extendReadsLen = 100
@@ -49,6 +50,7 @@ params {
   clusterOptions = false
   name = false
   plaintext_email = false
+  monochrome_logs = false
 
   // Options: Config
   multiqc_config = "$baseDir/assets/multiqc_config.yaml"
