--- a/nextflow.config
+++ b/nextflow.config
@@ -101,19 +101,19 @@ if(!params.igenomesIgnore){
 
 timeline {
   enabled = true
-  file = "${params.tracedir}/nf-core/chipseq_timeline.html"
+  file = "${params.tracedir}/exection_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.tracedir}/nf-core/chipseq_report.html"
+  file = "${params.tracedir}/exection_report.html"
 }
 trace {
   enabled = true
-  file = "${params.tracedir}/nf-core/chipseq_trace.txt"
+  file = "${params.tracedir}/exection_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.tracedir}/nf-core/chipseq_dag.svg"
+  file = "${params.tracedir}/pipeline_dag.svg"
 }
 
 manifest {
